--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <h1>Jensen Huang</h1>
     <h2>Co-founder and CEO of NVIDIA</h2>
-     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Jensen_Huang_20231109_%28cropped2%29.jpg/512px-Jensen_Huang_20231109_%28cropped2%29.jpg" class="rounded-image"/>
+     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Jensen_Huang_20231109_%28cropped2%29.jpg/512px-Jensen_Huang_20231109_%28cropped2%29.jpg" class="rounded-image">
     <p class="intro">A visionary leader who shaped the world of graphics processing and AI.</p>
   </header>
 
